--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
     </main>
     <footer>
-        <p>[[[NOME DOS ALUNOS]]];</p>
+        <p>[[[Bruna,Thainara]]];</p>
     </footer>
 </body>
 </html>
